[package]
name = "starknet-selector-decoder"
authors = ["amanusk <amanusk@pm.me>"]
license = "MIT OR Apache-2.0"
version = "0.1.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/amanusk/starknet-selector-decoder"
description = """
Lookup Starknet selectors from hash to string
"""
keywords = ["starknet", "web3", "cairo"]
exclude = [".github/**", "remove_dups.sh"]

[dependencies]
phf = { version = "0.11", default-features = false }


[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
starknet = "0.9.0"


